--- a/samples/SentimentAnalyzerCustomSkill/cpp/Apps/FaceSentimentAnalysisApp_C++WinRT/packages.config
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/Apps/FaceSentimentAnalysisApp_C++WinRT/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Contoso.FaceSentimentAnalyzer_CPP" version="0.0.0.7-experimental" targetFramework="native" />
   <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.5.2.15" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.SkillInterfacePreview.DXCoreExtension" version="0.0.1.2-pre" targetFramework="native" />
   <package id="Microsoft.VCRTForwarders.140" version="1.0.0-rc" targetFramework="native" />
 </packages>
