--- a/samples/GalleryApp/GalleryApp.csproj
+++ b/samples/GalleryApp/GalleryApp.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -115,6 +115,18 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\common\cs\FrameReaderFrameSource.cs">
+      <Link>FrameSource\FrameReaderFrameSource.cs</Link>
+    </Compile>
+    <Compile Include="..\common\cs\IFrameSource.cs">
+      <Link>FrameSource\IFrameSource.cs</Link>
+    </Compile>
+    <Compile Include="..\common\cs\ImageFileFrameSource.cs">
+      <Link>FrameSource\ImageFileFrameSource.cs</Link>
+    </Compile>
+    <Compile Include="..\common\cs\MediaPlayerFrameSource.cs">
+      <Link>FrameSource\MediaPlayerFrameSource.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -158,6 +170,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview">
+      <Version>0.5.2.15</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AI.Skills.Vision.SkeletalDetectorPreview">
+      <Version>0.1.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.8</Version>
     </PackageReference>
